# ROS2-Bridge

./: .gitignore  .gitmodules  BRIDGE_V2_IMPLEMENTATION_PLAN.md  CHANGELOG_DEV.md  ERRATA.md  ERRATA_BOOTSEL.md  ERRATA_PARAM_SERVER.md  Makefile  ONBOARDING.md  README.md  RESTART_PROMPT.md  ROS2_Bridge_TECHNICAL_OVERVIEW.md  TECHNICAL_OVERVIEW.md  V2_REVIEW_QUESTIONS.md  docker-compose.yml  memory.md  policy.md
.cursor/rules/: errata-changelog.mdc
app/: CMakeLists.txt  config.json  prj.conf  west.yml
app/boards/: w5500_evb_pico.overlay
app/modules/w6100_driver/drivers/ethernet/: eth_w6100.c  eth_w6100_priv.h
app/modules/w6100_driver/zephyr/: CMakeLists.txt  module.yml
app/src/: main.c
app/src/bridge/: channel.h  channel_manager.c  channel_manager.h  diagnostics.c  diagnostics.h  param_server.c  param_server.h  service_manager.c
app/src/config/: config.c  config.h
app/src/drivers/: drv_adc.c  drv_adc.h  drv_gpio.c  drv_gpio.h  drv_pwm_in.h
app/src/shell/: shell_cmd.c
app/src/user/: estop.c  rc.c  rc.h  test_channels.c  test_channels.h  user_channels.c  user_channels.h
apps/estop/: CMakeLists.txt  prj.conf
apps/estop/boards/: w5500_evb_pico.overlay
apps/estop/src/: estop.c  mode.c  mode.h  okgo_btn.c  okgo_btn.h  okgo_led.c  okgo_led.h  user_channels.c
apps/pedal/: CMakeLists.txt  prj.conf
apps/pedal/boards/: w5500_evb_pico.overlay
apps/pedal/src/: pedal.c  pedal.h  user_channels.c
apps/rc/: CMakeLists.txt  Kconfig  prj.conf  west.yml
apps/rc/boards/: w5500_evb_pico.overlay
apps/rc/dts/bindings/: vendor-prefixes.txt
apps/rc/dts/bindings/sensor/: nowlab,pwm-input-pio.yaml
apps/rc/src/: gpio_out.c  gpio_out.h  rc.c  user_channels.c
common/: CMakeLists.txt  Kconfig
common/src/: main.c
common/src/bridge/: channel_manager.c  channel_manager.h  param_server.c  service_manager.h
common/src/config/: config.h
common/src/drivers/: drv_adc.c  drv_gpio.c  drv_gpio.h  drv_imu.h  drv_pwm_in.c  drv_pwm_in.h  drv_pwm_in_pio.c
common/src/user/: user_channels.h
devices/E_STOP/: config.json
devices/PEDAL/: config.json
devices/RC/: config.json
docker/: Dockerfile  Dockerfile.foxglove  Dockerfile.visualizer
docs/: ARCHITECTURE.md  backlog.md  upstream_prs.md
examples/estop_monitor/: README.md  estop.h  estop_monitor.py
host_ws/: README.md
host_ws/config/: robot_network.yaml
host_ws/install/: local_setup.sh  setup.sh
host_ws/install/basicmicro_ros2/lib/basicmicro_ros2/: basicmicro_node.py  distance_movement_service.py  duty_control_service.py  motion_config_service.py  performance_monitor.py  servo_position_service.py  trajectory_monitor.py  trajectory_service.py
host_ws/install/basicmicro_ros2/share/basicmicro_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
host_ws/install/basicmicro_ros2/share/basicmicro_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  basicmicro_ros2Config-version.cmake  basicmicro_ros2Config.cmake  basicmicro_ros2__rosidl_typesupport_cExport-noconfig.cmake  basicmicro_ros2__rosidl_typesupport_cExport.cmake  basicmicro_ros2__rosidl_typesupport_cppExport-noconfig.cmake  basicmicro_ros2__rosidl_typesupport_cppExport.cmake  basicmicro_ros2__rosidl_typesupport_introspection_cExport-noconfig.cmake  basicmicro_ros2__rosidl_typesupport_introspection_cExport.cmake  basicmicro_ros2__rosidl_typesupport_introspection_cppExport-noconfig.cmake  basicmicro_ros2__rosidl_typesupport_introspection_cppExport.cmake  export_basicmicro_ros2__rosidl_generator_cExport-noconfig.cmake  export_basicmicro_ros2__rosidl_generator_cExport.cmake  export_basicmicro_ros2__rosidl_generator_cppExport.cmake  export_basicmicro_ros2__rosidl_generator_pyExport-noconfig.cmake  export_basicmicro_ros2__rosidl_generator_pyExport.cmake  export_basicmicro_ros2__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_basicmicro_ros2__rosidl_typesupport_fastrtps_cExport.cmake  export_basicmicro_ros2__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_basicmicro_ros2__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
host_ws/install/roboclaw_hardware/share/roboclaw_hardware/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
host_ws/install/roboclaw_tcp_adapter/lib/roboclaw_tcp_adapter/: rc_teleop_node  roboclaw_tcp_node  safety_bridge_node
host_ws/install/roboclaw_tcp_adapter/share/roboclaw_tcp_adapter/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
host_ws/install/roboclaw_tcp_adapter/share/roboclaw_tcp_adapter/config/: roboclaw_params.yaml
host_ws/install/roboclaw_tcp_adapter/share/roboclaw_tcp_adapter/launch/: roboclaw.launch.py
host_ws/log/: latest_build  latest_test  latest_test-result
host_ws/src/roboclaw_tcp_adapter/: package.xml  setup.cfg  setup.py
host_ws/src/roboclaw_tcp_adapter/config/: roboclaw_params.yaml
host_ws/src/roboclaw_tcp_adapter/launch/: roboclaw.launch.py
host_ws/src/roboclaw_tcp_adapter/roboclaw_tcp_adapter/: __init__.py  basicmicro_tcp.py  rc_teleop_node.py  roboclaw_tcp_node.py  safety_bridge_node.py  tcp_port.py
modules/w6100_driver/drivers/ethernet/: eth_w6100.c
modules/w6100_driver/zephyr/: Kconfig
tools/: cyclonedds.xml  docker-run-agent-udp.sh  docker-run-roboclaw.sh  docker-run-ros2.sh  estop_measure.py  flash.sh  portainer-templates.json  rc_measure.py  start-all.sh  start-eth.sh  start-foxglove.sh  start-robot-tabs.sh  start-robot.sh  start-visualizer.sh  stop-robot.sh  stress_report.json  stress_test.py  test_bridge.py  test_motor_duty.py  upload_config.py  v2_stress_report.json  v2_stress_test.py
tools/patches/: apply.sh
tools/ros_graph/: gen_dot.py  setting.json
(+301 files in other folders)
