<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboclaw_tcp_adapter</name>
  <version>0.1.0</version>
  <description>
    TCP socket transport adapter for Basicmicro motor controllers (RoboClaw / MCP)
    accessed through USR-K6 or similar Ethernet-to-Serial converters.
    Includes a safety bridge node that relays E-Stop signals to the motor controller.
  </description>
  <maintainer email="eduard@nowlab.eu">Eduard Sik</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>basicmicro_driver</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
